# api-key-management-solana

./: Anchor.toml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
docs/: SUPERTEAM_SUBMISSION.md
programs/api-key-management/: Cargo.toml
programs/api-key-management/src/: lib.rs
scripts/: verify_submission_readiness.sh
tests/: Cargo.toml
tests/src/: lib.rs  test_initialize.rs  test_logic.rs
