[package]
name = "api-key-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-key-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
anchor-client = "0.32.1"
api-key-management = { path = "../programs/api-key-management" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
sha2 = "0.10"
shellexpand = "3"
